--- a/CalculadoraAPI-master/build.gradle
+++ b/CalculadoraAPI-master/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
 	id 'war'
-	id 'jacobo'
+	id 'jacoco'
 }
 
 group = 'com.devops'
