--- a/CalculadoraAPI-master/build.gradle
+++ b/CalculadoraAPI-master/build.gradle
@@ -26,23 +26,25 @@ dependencies {
 }
 
 test {
-	useJUnitPlatform()
-	finalizedBy jacocoTestReport
+	useJUnitPlatform()    
+	finalizedBy jacocoTestReport // report is always generated after tests run
 }
 
-jacocoTestReport { 
-	dependsOn test 
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
 }
 
-jacoco { 
-	toolVersion = "0.8.5" 
-	reportsDir = file("build/reports/jacoco") 
+
+jacoco {
+    toolVersion = "0.8.5"
+    reportsDir = file("build/reports/jacoco")
 }
 
-jacocoTestReport { 
-	reports { 
-		xml.enabled true 
-		csv.enabled false 
-		html.destination file("${buildDir}/jacocoHtml") 
-	} 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
+    }
 }
+
